# agentgateway_mcp_firewall

./: .gitignore  Dockerfile  LICENSE  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  start.sh
configs/: demo-config.yaml  firewall-config.yaml
demo/: run-demo.sh
demo/malicious-mcp-server/: Dockerfile  kmcp.yaml  server.js
deploy/k8s/: agentgateway.yaml  firewall-deployment.yaml  grafana.yaml  kagent-security-agent.yaml  prometheus.yaml
docs/: BLOG.md
src/: __init__.py  cli.py  firewall.py  firewall_mcp_server.py  metrics.py  patterns.py  policy.py  reporter.py  response_scanner.py  scanner.py  semantic_detector.py
tests/: test_scanner.py
